fixed overflow on mobile screen and added social media links

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -123,6 +123,10 @@ body {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 2rem;
+
+  @media (max-width: 640px) {
+    padding: 0 1rem;
+  }
 }
 
 .section-padding {
